fixed nav z-index bug

--- a/assets/styl/objects/_site-primary-nav.styl
+++ b/assets/styl/objects/_site-primary-nav.styl
@@ -9,7 +9,7 @@
   top 0
   left 0
   height 100%
-  z-index 3
+  z-index 4
   width primaryNavWidth
   color white
   text-align center
