--- a/assets/styl/objects/_site-secondary-nav.styl
+++ b/assets/styl/objects/_site-secondary-nav.styl
@@ -4,7 +4,7 @@
   width secondaryNavWidth + primaryNavWidth
   top 0
   height 100%
-  z-index 2
+  z-index 3
   background #eee
   padding 25px
   padding-left primaryNavWidth + 25px
